@@ -1,3 +1,9 @@
+Thu May  8 2008 Anton Kokalj (tone.kokalj@ijs.si)
+	* syncronizing all PWgui help files (with the aid og helpdoc
+		utility)
+	* small updates to all modules
+	* changing the version number to 4.0
+	
 Jan/Feb 2008 Anton Kokalj (tone.kokalj@ijs.si)
 	* syncronizing PWgui modules with QE CVS (very many changes). The
 		ld1.x (atomic) module fully completed now. ph.x module
